# magjudge

judge/: .gitignore  Cargo.toml  Makefile  README.md  default.toml
judge/public/: index.html
judge/src/: compile.rs  config.rs  execute.rs  main.rs  program.rs  server.rs
judge/src/program/: compile.rs  execute.rs
